--- a/templates/login.html
+++ b/templates/login.html
@@ -4,19 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h2>Login</h2>
-    <form action="/login" method="post">
-        <label for="username_or_email">Username or Email:</label>
-        <input type="text" id="username_or_email" name="username_or_email" required><br>
-        
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
-        
-        <button type="submit">Login</button>
-    </form>
-
-    <p>Don't have an account? <a href="/">Register</a></p>
+    <div class="container">
+        <div class="form-box">
+            <h2>Login</h2>
+            <form action="/login" method="post">
+                <label for="username_or_email">Username or Email:</label>
+                <input type="text" id="username_or_email" name="username_or_email" required><br>
+                
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required><br>
+                
+                <div class="extra-options">
+                    <label for="remember">
+                        <input type="checkbox" id="remember" name="remember"> Remember me
+                    </label>
+                    <button type="button" class="forgot-password">Forgot Password?</button>
+                </div>
+                
+                <button type="submit">Login</button>
+            </form>
+            <p>Don't have an account? <a href="/signup">Register</a></p>
+        </div>
+    </div>
 </body>
 </html>
