--- a/templates/login.html
+++ b/templates/login.html
@@ -11,17 +11,14 @@
         <div class="form-box">
             <h2>Login</h2>
             <form action="/login" method="post">
-                <label for="username_or_email">Username or Email:</label>
-                <input type="text" id="username_or_email" name="username_or_email" required><br>
-                
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required><br>
+                <input type="text" id="username_or_email" name="username_or_email" placeholder="Username or Email" required><br>
+                <input type="password" id="password" name="password" placeholder="Password" required><br>
                 
                 <div class="extra-options">
                     <label for="remember">
                         <input type="checkbox" id="remember" name="remember"> Remember me
                     </label>
-                    <button type="button" class="forgot-password">Forgot Password?</button>
+                    <button id="forgot" type="button" class="forgot-password">Forgot Password?</button>
                 </div>
                 
                 <button type="submit">Login</button>
