--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,23 +11,18 @@
         <div class="form-box">
             <h2>Sign Up</h2>
             <form action="/signup" method="post">
-                <label for="first_name">First Name:</label>
-                <input type="text" id="first_name" name="first_name" required><br>
+
+                <input type="text" id="first_name" name="first_name" placeholder="First Name" required><br>
+
+                <input type="text" id="last_name" name="last_name" placeholder="Last Name" required><br>
                 
-                <label for="last_name">Last Name:</label>
-                <input type="text" id="last_name" name="last_name" required><br>
+                <input type="text" id="username" name="username" placeholder="Username" required><br>
+         
+                <input type="email" id="email" name="email" placeholder="Email" required><br>
+          
+                <input type="password" id="password" name="password" placeholder="Password" required><br>
                 
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required><br>
-                
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required><br>
-                
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required><br>
-                
-                <label for="confirm_password">Confirm Password:</label>
-                <input type="password" id="confirm_password" name="confirm_password" required><br>
+                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required><br>
                 
                 <button type="submit">Sign Up</button>
             </form>
