--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
                 
                 <button type="submit">Login</button>
             </form>
-            <p>Don't have an account? <a href="/signup">Register</a></p>
+            <p>Don't have an account? <a href="/">Register</a></p>
         </div>
     </div>
 </body>
