--- a/templates/login.html
+++ b/templates/login.html
@@ -11,16 +11,28 @@
         <div class="form-box">
             <h2>Login</h2>
             <form action="/login" method="post">
-                <input type="text" id="username_or_email" name="username_or_email" placeholder="Username or Email" required><br>
-                <input type="password" id="password" name="password" placeholder="Password" required><br>
-                
+                <!-- Username or Email -->
+                <div class="form__group field">
+                    <input type="text" class="form__field" placeholder="Username or Email" name="username_or_email" id="username_or_email" required />
+                    <label for="username_or_email" class="form__label">Username or Email</label>
+                </div>
+
+                <!-- Password -->
+                <div class="form__group field">
+                    <input type="password" class="form__field" placeholder="Password" name="password" id="password" required />
+                    <label for="password" class="form__label">Password</label>
+                </div>
+
                 <div class="extra-options">
+                    <!-- Remember Me Checkbox -->
                     <label for="remember">
                         <input type="checkbox" id="remember" name="remember"> Remember me
                     </label>
+                    <!-- Forgot Password Button -->
                     <button id="forgot" type="button" class="forgot-password">Forgot Password?</button>
                 </div>
-                
+
+                <!-- Submit Button -->
                 <button type="submit">Login</button>
             </form>
             <p>Don't have an account? <a href="/">Register</a></p>
