--- a/static/styles.css
+++ b/static/styles.css
@@ -71,6 +71,7 @@ h2 {
     padding: 7px 0;
     background: transparent;
     transition: border-color 0.2s, padding-bottom 0.2s;
+    font-size: 15px;
 }
 
 .form__field::placeholder {
@@ -112,6 +113,10 @@ h2 {
 .form__field:required,
 .form__field:invalid {
     box-shadow: none;
+}
+
+.extra-padding {
+    padding-bottom: 20px; /* Adjust the value as needed */
 }
 
 /* Button Styling */
