--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,18 +11,36 @@
         <div class="form-box">
             <h2>Sign Up</h2>
             <form action="/signup" method="post">
-
-                <input type="text" id="first_name" name="first_name" placeholder="First Name" required><br>
-
-                <input type="text" id="last_name" name="last_name" placeholder="Last Name" required><br>
                 
-                <input type="text" id="username" name="username" placeholder="Username" required><br>
-         
-                <input type="email" id="email" name="email" placeholder="Email" required><br>
-          
-                <input type="password" id="password" name="password" placeholder="Password" required><br>
+                <div class="form__group field">
+                    <input type="text" class="form__field" id="first_name" name="first_name" placeholder="First Name" required />
+                    <label for="first_name" class="form__label">First Name</label>
+                </div>
                 
-                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required><br>
+                <div class="form__group field">
+                    <input type="text" class="form__field" id="last_name" name="last_name" placeholder="Last Name" required />
+                    <label for="last_name" class="form__label">Last Name</label>
+                </div>
+                
+                <div class="form__group field">
+                    <input type="text" class="form__field" id="username" name="username" placeholder="Username" required />
+                    <label for="username" class="form__label">Username</label>
+                </div>
+                
+                <div class="form__group field">
+                    <input type="email" class="form__field" id="email" name="email" placeholder="Email" required />
+                    <label for="email" class="form__label">Email</label>
+                </div>
+
+                <div class="form__group field">
+                    <input type="password" class="form__field" id="password" name="password" placeholder="Password" required />
+                    <label for="password" class="form__label">Password</label>
+                </div>
+
+                <div class="form__group field extra-padding">
+                    <input type="password" class="form__field" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required />
+                    <label for="confirm_password" class="form__label">Confirm Password</label>
+                </div>
                 
                 <button type="submit">Sign Up</button>
             </form>
