--- a/templates/signup.html
+++ b/templates/signup.html
@@ -37,14 +37,14 @@
                     <label for="password" class="form__label">Password</label>
                 </div>
 
-                <div class="form__group field extra-padding">
+                <div class="form__group field extra-bottom-padding">
                     <input type="password" class="form__field" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required />
                     <label for="confirm_password" class="form__label">Confirm Password</label>
                 </div>
                 
                 <button type="submit">Sign Up</button>
             </form>
-            <p>Already have an account? <a href="/login">Login</a></p>
+            <p class="extra-top-padding">Already have an account? <a href="/login">Login</a></p>
         </div>
     </div>
 </body>
