--- a/templates/login.html
+++ b/templates/login.html
@@ -35,7 +35,7 @@
                 <!-- Submit Button -->
                 <button type="submit">Login</button>
             </form>
-            <p>Don't have an account? <a href="/">Register</a></p>
+            <p class="extra-top-padding" >Don't have an account? <a href="/">Register</a></p>
         </div>
     </div>
 </body>
