--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
     <!-- New Banner (no conflicts with existing classes) -->
     <div class="top-banner">
         <div class="banner-logo">
-            <img src="your-image-url.jpg" alt="Logo" class="banner-logo-img">
+            <img src="/static/images/Penguinnobg.png" alt="Logo" class="banner-logo-img">
         </div>
         <div class="banner-buttons">
             <button class="banner-btn">Home</button>
