--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
 <body>
     <div class="top-banner">
         <div class="banner-logo">
-            <img src="your-image-url.jpg" alt="Logo" class="banner-logo-img">
+            <img src="/static/images/Penguinnobg.png" alt="Logo" class="banner-logo-img">
         </div>
         <div class="banner-buttons">
             <button class="banner-btn">Home</button>
